# jtr-mcp-server

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  mcp_inspector_config.json  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: INSTALLATION_SUMMARY.md
scripts/: docker_build.sh  docker_inspect.sh  docker_run.sh  docker_test.sh  run_server.sh  test_server.py
src/jtr_mcp/: __main__.py  config.py  jtr_wrapper.py  server.py
src/jtr_mcp/tools/: __init__.py  crack.py  session.py  status.py  unshadow.py
src/jtr_mcp/utils/: __init__.py  unshadow_impl.py  validators.py
tests/fixtures/: sample_passwd.txt  sample_shadow.txt  test_md5.txt  test_md5_real.txt  test_sha512.txt  test_sha512_working.txt
wordlists/common/: test-small.txt
